I forgot to upload the full project lol

--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 
 </head>
 <body>
+
+    <div id="canvasContainer">
+        <canvas id="theCanvas"></canvas>
+
+        <button id="lineWidthBtn">Change Line Width</button> <p id="showWidth">1</p>
+        <button id="lineColorBtn">Change Line Color</button> <p id="showColor">Color</p>
+        <button id="clear">Clear Canvas</button>
+    </div>
     
     <script type="text/javascript" src="main.js"></script>
 
